fix footer overlapping

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer-container {
-    padding-top: 10rem;
+    padding-top: 15rem;
 }
 
 .footer {
